--- a/disclaimer.html
+++ b/disclaimer.html
@@ -1,9 +1,9 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Header Footer| Tanumanasa</title>
+    <title>Terms | Tanumanasa</title>
     <link rel="stylesheet" href="./assets/css/plugins.css">
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="./assets/css/colors/orange.css">
@@ -62,7 +62,7 @@
                       <button type="button" class="btn-close btn-close-white offcanvas-close offcanvas-nav-close" aria-label="Close"></button>
                     </div>
                       <ul class="navbar-nav">
-                          <li class="nav-item"> <a class="nav-link active " href="index.html"> Home</a> </li>
+                          <li class="nav-item"> <a class="nav-link active " href="index.html">Home</a> </li>
                           <li class="nav-item"> <a class="nav-link " href="about.html">About Us</a> </li>
                           <!--<li class="nav-item"> <a class="nav-link" href="services.html">Services</a> </li>-->
                           <li class="nav-item"> <a class="nav-link" href="career.html">Career</a> </li>
@@ -96,7 +96,7 @@
             <div class="container py-5">
                 <div class="row text-center">
                     <div class="col-lg-9 col-xxl-7 mx-auto" data-cues="zoomIn" data-group="welcome" data-interval="-200">
-                        <h2 class="display-1 mb-4">About Tanumanasa</h2>
+                        <h2 class="display-1 mb-4">Disclaimer</h2>
                         <p class="lead fs-24 lh-sm px-md-5 px-xl-15 px-xxl-10">You have to grow from the inside out. None can teach you, none can make you spiritual. There is no other teacher but your own soul. </p>
                     </div>
                     <!-- /column -->
@@ -106,6 +106,66 @@
             <!-- /.container -->
         </section>
         <!--Bread Crumb-->
+        <section>
+            <div class="container">
+               
+                <div class="section-pannel-content">
+                    <h3 class="terms">WEBSITE DISCLAIMER</h3>
+                    <p>
+                        The information provided by <a href="#"> Tanumanasa Service Pvt. Ltd.</a> (“Company”, “we”, “our”, “us”) on<a href="https://tanumanasa.com" target="blank">www.tanumanasa.com</a> (the “Site”) is for general informational purposes only. All information on the Site is provided in good faith, however we make no representation or warranty of any kind, express or implied, regarding the accuracy, adequacy, validity, reliability, availability, or completeness of any information on the Site.<br><br>
+                        UNDER NO CIRCUMSTANCE SHALL WE HAVE ANY LIABILITY TO YOU FOR ANY LOSS OR DAMAGE OF ANY KIND INCURRED AS A RESULT OF THE USE OF THE SITE OR RELIANCE ON ANY INFORMATION PROVIDED ON THE SITE. YOUR USE OF THE SITE AND YOUR RELIANCE ON ANY INFORMATION ON THE SITE IS SOLELY AT YOUR OWN RISK.<br>
+
+                    </p>
+                    <h3 class="terms">EXTERNAL LINKS DISCLAIMER</h3>
+                    <p>
+                        The Site may contain (or you may be sent through the Site) links to other websites or content belonging to or originating from third parties or links to websites and features. Such external links are not investigated, monitored, or checked for accuracy, adequacy, validity, reliability, availability or completeness by us.<br><br>
+
+                        WE DO NOT WARRANT, ENDORSE, GUARANTEE, OR ASSUME RESPONSIBILITY FOR THE ACCURACY OR RELIABILITY OF ANY INFORMATION OFFERED BY THIRD-PARTY WEBSITES LINKED THROUGH THE SITE OR ANY WEBSITE OR FEATURE LINKED IN ANY BANNER OR OTHER ADVERTISING. WE WILL NOT BE A PARTY TO OR IN ANY WAY BE RESPONSIBLE FOR MONITORING ANY TRANSACTION BETWEEN YOU AND THIRD-PARTY PROVIDERS OF PRODUCTS OR SERVICES.
+                    </p>
+
+                    <h3 class="terms">PROFESSIONAL DISCLAIMER</h3>
+                    <p>
+                        The Site can not and does not contain medical advice. The information is provided for general informational and educational purposes only and is not a substitute for professional medical advice. Accordingly, before taking any actions based upon such information, we encourage you to consult with the appropriate professionals. We do not provide any kind of medical advice..<br><br>
+                        You represent and warrant that: (i) you have the legal right to use any card(s) or other payment method(s) in connection with any Purchase; and that (ii) the information you supply to us is true, correct and complete.<br><br>
+                        Content published o<a href="https://tanumanasa.com" target="blank">www.tanumanasa.com</a>  is intended to be used and must be used for informational purposes only. It is very important to do your own analysis before making any decision based on your own personal circumstances. You should take independent medical advice from a professional or independently research and verify any information that you find on our Website and wish to rely upon. <br><br>
+                        THE USE OR RELIANCE OF ANY INFORMATION CONTAINED ON THIS SITE IS SOLELY AT YOUR OWN RISK.<br>
+                    </p>
+
+                    <h3 class="terms">AFFILIATES DISCLAIMER</h3>
+                    <p>The Site may contain links to affiliate websites, and we may receive an affiliate commission for any purchases or actions made by you on the affiliate websites using such links.</p>
+
+                    <h3 class="terms">TESTIMONIALS DISCLAIMER</h3>
+                    <p>
+                        The Site may contain testimonials by users of our products and/or services. These testimonials reflect the real-life experiences and opinions of such users. However, the experiences are personal to those particular users, and may not necessarily be representative of all users of our products and/or services. We do not claim, and you should not assume that all users will have the same experiences.<br><br>
+                        YOUR INDIVIDUAL RESULTS MAY VARY.
+                        <br><br>The testimonials on the Site are submitted in various forms such as text, audio and/or video, and are reviewed by us before being posted. They appear on the Site verbatim as given by the users, except for the correction of grammar or typing errors. Some testimonials may have been shortened for the sake of brevity, where the full testimonial contained extraneous information not relevant to the general public.<br><br>
+                        The views and opinions contained in the testimonials belong solely to the individual user and do not reflect our views and opinions.
+
+                    </p>
+                    <h3 class="terms">ERRORS AND OMISSIONS DISCLAIMER</h3>
+                    <p>
+                        While we have made every attempt to ensure that the information contained in this site has been obtained from reliable sources, Tanumanasa Service Pvt. Ltd. is not responsible for any errors or omissions or for the results obtained from the use of this information. All information in this site is provided “as is”, with no guarantee of completeness, accuracy, timeliness or of the results obtained from the use of this information, and without warranty of any kind, express or implied, including, but not limited to warranties of performance, merchantability, and fitness for a particular purpose.<br><br>
+                        In no event will Tanumanasa Service Pvt. Ltd., its related partnerships or corporations, or the partners, agents or employees thereof be liable to you or anyone else for any decision made or action taken in reliance on the information in this Site or for any consequential, special or similar damages, even if advised of the possibility of such damages.
+
+                    </p>
+                    <h3 class="terms">GUEST CONTRIBUTORS DISCLAIMER</h3>
+                    <p>
+                        This Site may include content from guest contributors and any views or opinions expressed in such posts are personal and do not represent those of Tanumanasa Service Pvt. Ltd. or any of its staff or affiliates unless explicitly stated.
+                        <h3>LOGOS AND TRADEMARKS DISCLAIMER</h3>
+                    <p>All logos and trademarks of third parties referenced on <a href="https://tanumanasa.com" target="blank">www.tanumanasa.com</a> are the trademarks and logos of their respective owners. Any inclusion of such trademarks or logos does not imply or constitute any approval, endorsement or sponsorship of Tanumanasa Service Pvt. Ltd. by such owners.</p>
+                    <h3 class="terms">CONTACT US</h3>
+                    <p>
+                        Should you have any feedback, comments, requests for technical support or other inquiries, please contact us by email:<a href="mailto:support@tanumanasa.com" class="link-body">support@tanumanasa.com</a>
+                    </p>
+
+                </div>
+            </div>
+        </section>
+
+
+
+
+
     </div>
     <!-- /.content-wrapper -->
 
