--- a/about.html
+++ b/about.html
@@ -65,7 +65,7 @@
                           <li class="nav-item"> <a class="nav-link active " href="index.html">Home</a> </li>
                           <li class="nav-item"> <a class="nav-link " href="about.html">About Us</a> </li>
                           <!--<li class="nav-item"> <a class="nav-link" href="services.html">Services</a> </li>-->
-                          <li class="nav-item"> <a class="nav-link" href="career_counselling.html">Career</a> </li>
+                          <li class="nav-item"> <a class="nav-link" href="career.html">Career</a> </li>
                           <li class="nav-item"> <a class="nav-link" href="blogs.html">Blogs</a> </li>
                           <li class="nav-item"> <a class="nav-link" href="contact.html">Contact Us</a> </li>
                       </ul>
